--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     }
   ],
   "dependencies": {
-    "knox": "0.9.2",
-    "noflo": "0.5.22"
+    "knox": "~0.9.2",
+    "noflo": "~0.5.22"
   },
   "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-coffeelint": "0.0.15",
-    "grunt-cafe-mocha": "0.1.13",
-    "chai": "3.5.0",
-    "mocha": "2.5.3",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-noflo-manifest": "0.1.11"
+    "grunt": "^0.4.5",
+    "grunt-coffeelint": "^0.0.15",
+    "grunt-cafe-mocha": "^0.1.13",
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-noflo-manifest": "^0.1.11"
   },
   "keywords": [],
   "noflo": {
