--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "type": "git",
     "url": "git://github.com/noflo/noflo-s3.git"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "undefined/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "dependencies": {
     "knox": "~0.9.2",
     "noflo": "~0.5.22"
@@ -30,7 +25,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-noflo-manifest": "^0.1.11"
   },
-  "keywords": [],
+  "keywords": ["noflo", "s3"],
   "noflo": {
     "components": {
       "CreateClient": "components/CreateClient.coffee",
