--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "noflo": "~0.5.22"
   },
   "devDependencies": {
+    "coffee-script": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-coffeelint": "^0.0.15",
-    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-mocha-test": "^0.12.7",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "grunt-contrib-watch": "^1.0.0",
