--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "noflo-s3",
   "description": "S3 components for NoFlo",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": {
     "name": "Henri Bergius",
     "email": "henri.bergius@iki.fi",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "knox": "~0.9.2",
-    "noflo": "~0.5.22"
+    "noflo": "0.x >= 0.5"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
